Update main dependency

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=7.2",
         "yiisoft/yii2": "2.0.15.1",
         "yiisoft/yii2-queue": "^2.1",
-        "wearesho-team/wearesho-notifications-repository": "dev-master"
+        "wearesho-team/wearesho-notifications-repository": "^1.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.3",
